--- a/index1.html
+++ b/index1.html
@@ -4,6 +4,6 @@
         <title>Text!</title>
   </head>
   <body>
-      master file of branching 1
+      master file of branching
   </body>
 </html>
